<resources>
    <string name="app_name">RPS</string>
    <string name="rps">Rock Paper Scissors</string>
    <string name="button_rock">🪨</string>
    <string name="button_paper">📜</string>
    <string name="button_scissors">✂️</string>
    <string name="text_computer">Computer</string>
    <string name="text_you">You</string>
    <string name="text_result">Result</string>
    <string name="text_result_value" />
</resources>