<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/you_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:text="@string/text_you"
            app:layout_constraintBottom_toTopOf="@+id/computer_image"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.722"
            app:layout_constraintStart_toEndOf="@+id/computer_text" />

        <ImageView
            android:id="@+id/you_image"
            android:layout_width="148dp"
            android:layout_height="176dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.939"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.455"
            app:srcCompat="@drawable/white" />

        <TextView
            android:id="@+id/rps_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rps"
            android:textSize="34sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.100000024" />

        <Button
            android:id="@+id/paper_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:text="@string/button_paper"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/scissors_button"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/rock_button"
            app:layout_constraintTop_toBottomOf="@+id/rps_text"
            app:layout_constraintVertical_bias="0.89" />

        <Button
            android:id="@+id/rock_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/button_rock"
            app:layout_constraintBottom_toBottomOf="@+id/paper_button"
            app:layout_constraintEnd_toStartOf="@+id/paper_button"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/paper_button" />

        <Button
            android:id="@+id/scissors_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:text="@string/button_scissors"
            app:layout_constraintBottom_toBottomOf="@+id/paper_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/paper_button"
            app:layout_constraintTop_toTopOf="@+id/paper_button" />

        <ImageView
            android:id="@+id/computer_image"
            android:layout_width="148dp"
            android:layout_height="176dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/you_image"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.455"
            app:srcCompat="@drawable/white" />

        <TextView
            android:id="@+id/computer_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="60dp"
            android:layout_marginBottom="16dp"
            android:text="@string/text_computer"
            app:layout_constraintBottom_toBottomOf="@+id/you_text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/you_text"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/result_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:text="@string/text_result"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/rps_text"
            app:layout_constraintVertical_bias="0.63" />

        <TextView
            android:id="@+id/result_value_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:text="@string/text_result_value"
            app:layout_constraintBottom_toTopOf="@+id/paper_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/result_text"
            app:layout_constraintVertical_bias="0.094" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>